[metadata]
name = gluon
summary = OpenStack Gluon acts as a port arbiter between Nova and port-provider such as neutron
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    gluon
data_files =
    models = models/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
	proton-server = gluon.cmd.api:main
	protonclient = gluon.cmd.cli:main

gluon.backends =
    net-l3vpn = gluon.backends.backends.net_l3vpn:Provider

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gluon/locale
domain = gluon

[update_catalog]
domain = gluon
output_dir = gluon/locale
input_file = gluon/locale/gluon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gluon/locale/gluon.pot

[pbr]
autodoc_tree_index_modules = True
