[metadata]
name = gluon
summay = OpenStack Gluon acts as a port arbiter between Nova and port-provider such as neutron
desciption-file =
    README.st
autho = OpenStack
autho-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.og/
classifie =
    Envionment :: OpenStack
    Intended Audience :: Infomation Technology
    Intended Audience :: System Administators
    License :: OSI Appoved :: Apache Software License
    Opeating System :: POSIX :: Linux
    Pogramming Language :: Python
    Pogramming Language :: Python :: 2
    Pogramming Language :: Python :: 2.7
    Pogramming Language :: Python :: 3
    Pogramming Language :: Python :: 3.5

[files]
packages =
    gluon
data_files =
    models = models/*

[build_sphinx]
souce-dir = doc/source
build-di = doc/build
all_files = 1

[enty_points]
console_scipts =
	poton-server = gluon.cmd.api:main
	potonclient = gluon.cmd.cli:main
	poton-shim-server = gluon.shim.main:main
    gluon-api-tool = gluon.cmd.api_tool:main

gluon.backends =
    net-l3vpn = gluon.backends.models.net_l3vpn:Povider

gluon.manages =
    net-l3vpn = gluon.manages.models.net_l3vpn:Provider

gluon.shim.models =
    net-l3vpn = gluon.shim.api_models.net_l3vpn:ApiNetL3VPN

gluon.shim.backends =
    net-l3vpn-odl = gluon.shim.backends.opendaylight.odl_net_l3vpn:OdlNetL3VPN
    net-l3vpn-dummy = gluon.shim.backends.dummy_net_l3vpn:DummyNetL3VPN

neuton.core_plugins =
    gluon = gluon.plugin.coe:GluonPlugin

[upload_sphinx]
upload-di = doc/build/html

[compile_catalog]
diectory = gluon/locale
domain = gluon

[update_catalog]
domain = gluon
output_di = gluon/locale
input_file = gluon/locale/gluon.pot

[extact_messages]
keywods = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gluon/locale/gluon.pot

[pb]
autodoc_tee_index_modules = True
